<resources>
    <string name="app_name">MedUnnes</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profil</string>
    <string name="masuk_daftar">Masuk/Daftar</string>
    <string name="user_location">User\'s location</string>
    <string name="greeting">Selamat %1$s,</string>
    <string name="nama_and_titel">%1$s %2$s, %3$s</string>
    <string name="greetings">Salam sehat dan sejahtera</string>
    <string name="layanan_utama">Layanan Utama</string>
    <string name="konsultasi_sekarang">Konsultasi\nSekarang</string>
    <string name="janji_pasien">Buat Janji\ndengan Dokter</string>
    <string name="konsultasi_dokter">Konsultasi dengan Pasien</string>
    <string name="janji_dokter">Janji dengan\nPasien</string>
    <string name="daftar_sebagai">Daftar Sebagai</string>
    <string name="layanan">Layanan</string>
    <string name="pasien">Pasien</string>
    <string name="dokter">Dokter</string>
    <string name="dosen">Dosen</string>
    <string name="artikel_kesehatan">Artikel Kesehatan</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="faskes_terdekat">Faskes Terdekat</string>
    <string name="masuk_sebagai_pasien">Masuk Sebagai Pasien</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_sebagai_dokter">Daftar Sebagai Dokter</string>
    <string name="nama_lenkap">Nama Lengkap</string>
    <string name="title_depan">Titel Depan</string>
    <string name="masukkan_titel_depan">contoh: dr.</string>
    <string name="titel_belakang">Titel Belakang</string>
    <string name="masukkan_titel_belakang">contoh: SpOG</string>
    <string name="masukkan_nama_lengkap">Masukkan nama lengkap</string>
    <string name="no_reg">NIM</string>
    <string name="masukkan_nomor_reg">Masukkan NIM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lanjut">Lanjut</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string-array name="jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat_lengkap">Masukkan alamat lengkap</string>
    <string name="tempat_praktik">Tempat Praktik</string>
    <string name="masukkan_tempat_praktik">Masukkan tempat praktik</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="masukkan_no_telepon">Masukkan no. telepon</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="register">Register</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="approve_janji_pasien">Approve Janji Pasien</string>
    <string name="daftar_mahasiswa">Daftar Mahasiswa</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="search_hint">Cari nama pasien</string>
    <string name="sesi_pasien">Sesi pasien</string>
    <string name="status">Status</string>
    <string name="title_activity_layanan_dokter">LayananDokterActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="edit_profil">Edit Profil</string>
    <string name="faq">FAQ</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bahasa">Bahasa</string>
    <string name="hapus_akun">Keluar</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="role_dokter">Role dokter</string>
    <string name="pengalaman_dokter">Pengalaman Dokter</string>
    <string name="search_doctor_hint">Cari nama dokter</string>
    <string name="search_mahasiswa_hint">Cari nama mahasiswa</string>
    <string name="buat_janji">Buat Janji</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="pendidikan_dokter">Pendidikan dokter</string>
    <string name="button_back">button back</string>
    <string name="pilih_spesialisasi_dokter">Pilih spesialisasi dokter</string>
    <string name="spesialis_dokter">Spesialis %1s</string>
    <string name="spesialisasi_desk">Pilih spesialisasi dokter sesuai dengan kebutuhanmu</string>
    <string name="dokter_umum">Dokter Umum</string>
    <string name="kandungan">Kandungan</string>
    <string name="psikiater">Psikiater</string>
    <string name="kulit_dan_kelamin">Kulit dan Kelamin</string>
    <string name="lihat_selengkapnya">lihat selengkapnya</string>
    <string name="cari_dokter_umum">Cari Dokter Umum</string>
    <string name="rekomendasi_dokter_desk">Berikut ada rekomendasi dokter umum yang mungkin sesuai dengan kebutuhanmu</string>
    <string name="anak">Anak</string>
    <string name="syaraf">Syaraf</string>
    <string name="jantung">Jantung</string>
    <string name="bedah">Bedah</string>
    <string name="penyakit_dalam">Penyakit Dalam</string>
    <string name="mata">Mata</string>
    <string name="tht">THT</string>
    <string name="gigi">Gigi</string>
    <string name="spesialis">Spesialis</string>
    <string name="masukkan_spesialis">Masukkan spesialis</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="format_tangagl">Format: DD/MM/YYYY</string>
    <string name="pilih_sesi">Pilih Sesi</string>
    <string name="no_sesi">Sesi %1d</string>
    <string name="sesi_pukul">%1d - %2d</string>
    <string name="buat_janji_sekarang">Buat janji sekarang?</string>
    <string name="alert_buat_janji_deskripsi">Data yang sudah disimpan tidak bisa disubah</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="sukses">SUKSES!</string>
    <string name="buat_janji_sukses">Menunggu persetujuan dokter tersebut</string>
    <string name="ok">OK</string>
    <string name="buat_janji_form_is_empty">*silahkan pilih tanggal dan sesi</string>
    <string name="id">ID</string>
    <string name="tanggal_sesi">Tanggal Sesi</string>
    <string name="masukkan_pendidikan">Masukkan Asal Kampus</string>
    <string name="sesi">Sesi</string>
    <string name="setujui">Setujui</string>
    <string name="tolak">Tolak</string>
    <string name="data_empty">Tidak ada data yang ditemukan</string>
    <string name="tambah_pasien_hint">Isi form di bawah untuk menambahkan pasien</string>
    <string name="detail_informasi">Detail Informasi</string>
    <string name="hubungan">Hubungan</string>
    <string name="unggah_kartu_identitas">Unggah Foto KTP/KIA/Paspor Pasien</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_pasien">+ Pasien</string>
    <string name="delete_pasien_alert_deskripsi">Data yang sudah dihapus tidak dapat dikembalikan</string>
    <string name="hapus_data_pasien">Hapus data pasien?</string>
    <string name="nik">NIK</string>
    <string name="masukkan_nik">Masukkan NIK</string>
    <string name="masukkan_tinggi_badan_cm">Masukkan Tinggi Badan (cm)</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="tinggi_badan_cm">%1$s cm</string>
    <string name="masukkan_berat_badan_kg">Masukkan Berat Badan (kg)</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="berat_badan_kg">%1$d kg</string>
    <string name="dalam_cm">Dalam cm</string>
    <string name="dalam_kg">dalam kg</string>
    <string name="tempat_lulus">Tempat Lulus</string>
    <string name="masukkan_tempat_lulus">Masukkan tempat lulus</string>
    <string name="tanggal_mulai_aktif">Tanggal Mulai Aktif</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="masukkan_tahun_lulus">Masukkan tahun lulus</string>
    <string name="tahun_lulus">Tahun Lulus</string>
    <string name="tanggal_lulus">Tanggal Lulus</string>
    <string name="catatan">Catatan</string>
    <string name="berikan_catatan_kepada_dokter">Berikan catatan kepada dokter</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="beri_catatan">Beri catatan</string>
</resources>