<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth.login.LoginActivity">

    <TextView
        android:id="@+id/tv_login_as_pasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/masuk_sebagai_pasien"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_as_pasien"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/email"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email_title"
                app:endIconMode="clear_text"
                app:endIconTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:inputType="textEmailAddress"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <TextView
                android:id="@+id/tv_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/password"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_title"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/masukkan_password"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_remember_me"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password"/>

            <TextView
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/checkbox_remember_me"
                app:layout_constraintTop_toTopOf="@id/checkbox_remember_me"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_remember_me"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:text="@string/remember_me"/>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/checkbox_remember_me"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_remember_me"
                android:textColor="@color/grey"
                android:textSize="10sp"
                android:text="@string/forgot_password"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkbox_remember_me"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/grey"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/belum_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toStartOf="@id/daftar"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/belum_punya_akun"/>

            <TextView
                android:id="@+id/daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/belum_akun"
                app:layout_constraintStart_toEndOf="@id/belum_akun"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="4dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:text="@string/daftar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>