<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterAkunActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:src="@drawable/back_button"
            android:contentDescription="@string/button_back" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_register_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_form_registrasi"
        android:layout_marginTop="130dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/daftar_akun"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_form_registrasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_akun"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/email"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:endIconMode="clear_text"
                app:endIconTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:inputType="textEmailAddress"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <TextView
                android:id="@+id/tv_nama_lengkao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/nama_lenkap"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nama_lengkao"
                app:endIconMode="clear_text"
                app:endIconTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_lenkap"
                    android:inputType="text"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <TextView
                android:id="@+id/tv_tgl_lahir_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_nama_lengkap"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/tanggal_lahir"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_tgl_lahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tgl_lahir_title"
                app:endIconMode="custom"
                app:endIconTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/grey"
                app:endIconDrawable="@drawable/calendar">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_tgl_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dd_mm_yyyy"
                    android:inputType="datetime"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <TextView
                android:id="@+id/tv_kelamin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_tgl_lahir"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/jenis_kelamin"/>
            <Spinner
                android:id="@+id/spinner_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_kelamin_title"
                app:layout_constraintBottom_toTopOf="@id/tv_alamat"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/tv_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spinner_kelamin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/alamat"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_alamat"
                app:endIconMode="clear_text"
                app:endIconTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_alamat_lengkap"
                    android:inputType="textMultiLine"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <TextView
                android:id="@+id/tv_no_telepon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_alamat"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/no_telepon"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_no_telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_no_telepon_title"
                app:endIconMode="clear_text"
                app:endIconTint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_no_telepon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_no_telepon"
                    android:inputType="number"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <TextView
                android:id="@+id/tv_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_no_telepon"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:text="@string/password"/>

            <com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_title"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/masukkan_password"/>
            </com.medunnes.telemedicine.ui.cutomView.CustomTextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/grey"
                android:text="@string/register"/>

            <TextView
                android:id="@+id/sudah_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register"
                app:layout_constraintEnd_toStartOf="@id/tv_masuk"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sudah_punya_akun"/>

            <TextView
                android:id="@+id/tv_masuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sudah_akun"
                app:layout_constraintStart_toEndOf="@id/sudah_akun"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="4dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:text="@string/masuk"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>