<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_messanger_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_patient_name"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/iv_messanger"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/person"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cv_messanger_picture"
        app:layout_constraintTop_toTopOf="@id/cv_messanger_picture"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/nama_lenkap"/>

    <TextView
        android:id="@+id/tv_patient_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_patient_name"
        app:layout_constraintTop_toBottomOf="@id/tv_patient_name"
        android:text="@string/sesi_pasien"/>

    <TextView
        android:id="@+id/tv_messanger_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_patient_name"
        app:layout_constraintBottom_toBottomOf="@id/cv_messanger_picture"
        android:textSize="10sp"
        android:textColor="@color/fifth_color"
        android:text="@string/status"/>

</androidx.constraintlayout.widget.ConstraintLayout>